Made walls for the 2nd level and added a new player model.

--- a/.gitignore
+++ b/.gitignore
@@ -76,5 +76,5 @@ DerivedDataCache/*
 # Custom Added Content
 CastleJump/Content/StarterContent/
 CastleJump/Content/InfinityBladeGrassLands/
-
+CastleJump/Content/ParagonKallari/
 
